# openAPI2Typescript-rust

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  README.md  WORKSPACE_README.md  build.sh  openapi.json  openapi2ts.config.js  openapi2ts.config.json5  openapi2ts.config.json5.example  types.d.ts
crates/openapi2ts-cli/: Cargo.toml
crates/openapi2ts-cli/src/: main.rs  swagger2_to_openapi3_json.rs
crates/openapi2ts-core/: Cargo.toml
crates/openapi2ts-core/src/: config.rs  lib.rs  path_to_service_controller_template_data.rs  path_to_service_index_template_data.rs  schema_to_interface_template_data.rs  utles.rs
crates/openapi2ts-core/src/generator_template/: interface_template_generator.rs  mod.rs  service_controller_template_generator.rs  service_index_template_generator.rs
crates/openapi2ts-core/templates/: interface.tera  service_controller.tera  service_index.tera  service_index_object.tera
crates/openapi2ts-wasm/: Cargo.toml  README.md
crates/openapi2ts-wasm/npm/: .gitignore  cli.ts  global.d.ts  index.ts  openapi2ts-wasm.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
crates/openapi2ts-wasm/src/: index.mjs  lib.rs  wasm_config.rs
crates/openapi2ts-wasm/test/: package.json  pnpm-lock.yaml
src/: config.rs  interface_template_generator.rs  main.rs  path_to_service_controller_template_data.rs  path_to_service_index_template_data.rs  schema_to_interface_template_data.rs  utils.rs  utles.rs
src/generator_template/: interface_template_generator.rs  mod.rs  service_controller_template_generator.rs  service_index_template_generator.rs
templates/: interface.tera  serviceIndex.tera  service_controller.tera
test/: openapi2ts.config.js.example  package.json  pnpm-lock.yaml
