[package]
name = "openAPI2Typescript-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1.20.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
reqwest = { version = "0.11", features = ["json"] }
openapiv3 = "2.0"
heck = "0.4"
chrono = "0.4"  