[workspace]
members = [
    "crates/openapi2ts-core",    # 共享的核心库
    "crates/openapi2ts-cli",    # CLI 工具
    "crates/openapi2ts-wasm",    # WASM 绑定
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/openAPI2Typescript-rust"

[workspace.dependencies]
# 核心依赖
tera = "1.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
openapiv3 = "2.0"
heck = "0.4"
chrono = "0.4"
pinyin = "0.10"
indexmap = "2"

# CLI 特定依赖
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# WASM 特定依赖
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Response", "Request", "RequestInit", "RequestMode", "Headers"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"