[package]
name = "openapi2ts-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for OpenAPI to TypeScript code generation"

[lib]
doctest = false

[dependencies]
tera.workspace = true
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
openapiv3.workspace = true
heck.workspace = true
chrono.workspace = true
pinyin.workspace = true
indexmap.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
reqwest.workspace = true
